--- a/新包正式包.html
+++ b/新包正式包.html
@@ -5362,6 +5362,86 @@
           <p></p>
         </div>
       </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u655" class="ax_default box_1">
+        <div id="u655_div" class=""></div>
+        <div id="u655_text" class="text ">
+          <p><span>Registro Inicial&nbsp; 注册</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u656" class="ax_default box_1">
+        <div id="u656_div" class=""></div>
+        <div id="u656_text" class="text ">
+          <p><span>Crea una cuenta proporcionando tus datos básicos</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u657" class="ax_default box_1">
+        <div id="u657_div" class=""></div>
+        <div id="u657_text" class="text ">
+          <p><span>Solicitud de Préstamo 申请</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u658" class="ax_default box_1">
+        <div id="u658_div" class=""></div>
+        <div id="u658_text" class="text ">
+          <p><span>Completa el formulario con la cantidad deseada y el plazo de pago</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u659" class="ax_default box_1">
+        <div id="u659_div" class=""></div>
+        <div id="u659_text" class="text ">
+          <p><span>Verificación y Aprobación 审核</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u660" class="ax_default box_1">
+        <div id="u660_div" class=""></div>
+        <div id="u660_text" class="text ">
+          <p><span>Espera la revisión de tu solicitud y recibe la aprobación rápidamente</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片 ) -->
+      <div id="u661" class="ax_default _图片_">
+        <img id="u661_img" class="img " src="images/新包正式包/u603.svg"/>
+        <div id="u661_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片 ) -->
+      <div id="u662" class="ax_default _图片_">
+        <img id="u662_img" class="img " src="images/新包正式包/u603.svg"/>
+        <div id="u662_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (图片 ) -->
+      <div id="u663" class="ax_default _图片_">
+        <img id="u663_img" class="img " src="images/新包正式包/u603.svg"/>
+        <div id="u663_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u664" class="ax_default box_1">
+        <div id="u664_div" class=""></div>
+        <div id="u664_text" class="text ">
+          <p><span>Guía de préstamo 借款指引</span></p>
+        </div>
+      </div>
     </div>
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
